change date parsing again

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -813,6 +813,10 @@ body {
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
+  .header-text {
+    text-align: center;
+  }
   
   .header-credit {
     text-align: center;
